test/files/neg/t5044.check
t5044.scala:7: error: recursive value a needs type
    val id = m(a)
               ^
one error found
